--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Categories"
+            android:name=".CategoriesMain"
             android:label="@string/app_name" >
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
